--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,24 @@
 {
-	"presets":["env","stage-0","react"]
+	"presets": [
+		"react",
+		[
+			"env",
+			{
+				"targets": {
+					"browsers": [
+						"> 1%",
+						"last 2 versions",
+						"not ie <= 8"
+					]
+				},
+				"useBuiltIns": true
+			}
+		],
+		"stage-0"
+	],
+	"plugins": [
+		"react-html-attrs",
+		"syntax-dynamic-import",
+		"transform-decorators-legacy"
+	]
 }
