--- a/.babelrc
+++ b/.babelrc
@@ -1,24 +1,11 @@
 {
 	"presets": [
-		"react",
-		[
-			"env",
-			{
-				"targets": {
-					"browsers": [
-						"> 1%",
-						"last 2 versions",
-						"not ie <= 8"
-					]
-				},
-				"useBuiltIns": true
-			}
-		],
-		"stage-0"
+		"@babel/preset-env",
+		"@babel/preset-react"
 	],
-	"plugins": [
-		"react-html-attrs",
-		"syntax-dynamic-import",
-		"transform-decorators-legacy"
+	"plugins":[
+		"@babel/plugin-syntax-dynamic-import",
+		["@babel/plugin-proposal-decorators", { "legacy": true }],
+		["@babel/plugin-proposal-class-properties", { "loose" : true }]
 	]
 }
